--- a/website_code/homepage.css
+++ b/website_code/homepage.css
@@ -33,8 +33,8 @@ h6 {
 }
 
 /*--------------------------------------------------------------
-# Back to top button
---------------------------------------------------------------*/
+  # Back to top button
+  --------------------------------------------------------------*/
 .back-to-top {
   position: fixed;
   visibility: hidden;
@@ -66,8 +66,8 @@ h6 {
 }
 
 /*--------------------------------------------------------------
-# Preloader
---------------------------------------------------------------*/
+  # Preloader
+  --------------------------------------------------------------*/
 #preloader {
   position: fixed;
   top: 0;
@@ -112,8 +112,8 @@ h6 {
 }
 
 /*--------------------------------------------------------------
-# Disable aos animation delay on mobile devices
---------------------------------------------------------------*/
+  # Disable aos animation delay on mobile devices
+  --------------------------------------------------------------*/
 @media screen and (max-width: 768px) {
   [data-aos-delay] {
     transition-delay: 0 !important;
@@ -121,38 +121,12 @@ h6 {
 }
 
 /*--------------------------------------------------------------
-# Header
---------------------------------------------------------------*/
+  # Header
+  --------------------------------------------------------------*/
 #header {
   transition: all 0.5s;
   z-index: 997;
   padding: 20px 0;
-}
-
-#contact-nav {
-  background: rgba(24, 6, 185, 0.8);
-  padding: 12px 0;
-  transition: all 0.5s;
-  z-index: 997;
-  padding: 20px 0;
-}
-
-#contact-nav .logo {
-  font-size: 32px;
-  margin: 0;
-  padding: 0;
-  line-height: 1;
-  font-weight: 400;
-  letter-spacing: 2px;
-  text-transform: uppercase;
-}
-
-#contact-nav .logo a {
-  color: #fff;
-}
-
-#contact-nav .logo img {
-  max-height: 40px;
 }
 
 #header.header-scrolled,
@@ -180,11 +154,11 @@ h6 {
 }
 
 /*--------------------------------------------------------------
-# Navigation Menu
---------------------------------------------------------------*/
+  # Navigation Menu
+  --------------------------------------------------------------*/
 /**
-* Desktop Navigation 
-*/
+  * Desktop Navigation 
+  */
 .navbar {
   padding: 0;
 }
@@ -336,8 +310,8 @@ h6 {
 }
 
 /**
-* Mobile Navigation 
-*/
+  * Mobile Navigation 
+  */
 .mobile-nav-toggle {
   color: #fff;
   font-size: 28px;
@@ -448,8 +422,8 @@ h6 {
 }
 
 /*--------------------------------------------------------------
-# Hero Section
---------------------------------------------------------------*/
+  # Hero Section
+  --------------------------------------------------------------*/
 #hero {
   width: 100%;
   height: 100vh;
@@ -575,8 +549,8 @@ h6 {
 }
 
 /*--------------------------------------------------------------
-# Sections General
---------------------------------------------------------------*/
+  # Sections General
+  --------------------------------------------------------------*/
 section {
   padding: 100px 0;
   overflow: hidden;
@@ -616,8 +590,8 @@ section {
 }
 
 /*--------------------------------------------------------------
-# About
---------------------------------------------------------------*/
+  # About
+  --------------------------------------------------------------*/
 .about {
   padding: 120px 0;
 }
@@ -673,8 +647,8 @@ section {
 }
 
 /*--------------------------------------------------------------
-# Counts
---------------------------------------------------------------*/
+  # Counts
+  --------------------------------------------------------------*/
 .counts {
   background: linear-gradient(
       90deg,
@@ -701,8 +675,8 @@ section {
 }
 
 /*--------------------------------------------------------------
-# Services
---------------------------------------------------------------*/
+  # Services
+  --------------------------------------------------------------*/
 .services .icon-box {
   text-align: center;
   padding: 70px 20px 80px 20px;
@@ -833,8 +807,8 @@ section {
 }
 
 /*--------------------------------------------------------------
-# Features
---------------------------------------------------------------*/
+  # Features
+  --------------------------------------------------------------*/
 .features .icon-box h4 {
   font-size: 20px;
   font-weight: 700;
@@ -861,8 +835,8 @@ section {
 }
 
 /*--------------------------------------------------------------
-# Testimonials
---------------------------------------------------------------*/
+  # Testimonials
+  --------------------------------------------------------------*/
 .testimonials .testimonial-item {
   box-sizing: content-box;
   min-height: 320px;
@@ -946,8 +920,8 @@ section {
 }
 
 /*--------------------------------------------------------------
-# Portfolio
---------------------------------------------------------------*/
+  # Portfolio
+  --------------------------------------------------------------*/
 .portfolio .portfolio-item {
   margin-bottom: 30px;
 }
@@ -1071,8 +1045,8 @@ section {
 }
 
 /*--------------------------------------------------------------
-# Portfolio Details
---------------------------------------------------------------*/
+  # Portfolio Details
+  --------------------------------------------------------------*/
 .portfolio-details {
   padding-top: 40px;
 }
@@ -1142,8 +1116,8 @@ section {
 }
 
 /*--------------------------------------------------------------
-# Pricing
---------------------------------------------------------------*/
+  # Pricing
+  --------------------------------------------------------------*/
 .pricing .box {
   padding: 20px;
   background: #fff;
@@ -1252,8 +1226,8 @@ section {
 }
 
 /*--------------------------------------------------------------
-# Frequently Asked Questions
---------------------------------------------------------------*/
+  # Frequently Asked Questions
+  --------------------------------------------------------------*/
 .faq {
   background: linear-gradient(42deg, #5846f9 0%, #7b27d8 100%);
 }
@@ -1347,14 +1321,13 @@ section {
 }
 
 /*--------------------------------------------------------------
-# Contact
---------------------------------------------------------------*/
-
+  # Contact
+  --------------------------------------------------------------*/
 .contact .info-box {
   color: #444444;
   text-align: center;
   box-shadow: 0 0 30px rgba(214, 215, 216, 0.6);
-  padding: 50px 100px 50px 100px;
+  padding: 20px 0 30px 0;
   background: #fff;
 }
 
@@ -1479,8 +1452,8 @@ section {
 }
 
 /*--------------------------------------------------------------
-# Breadcrumbs
---------------------------------------------------------------*/
+  # Breadcrumbs
+  --------------------------------------------------------------*/
 .breadcrumbs {
   padding: 15px 0;
   background: #f2f6f9;
@@ -1532,8 +1505,8 @@ section {
 }
 
 /*--------------------------------------------------------------
-# Footer
---------------------------------------------------------------*/
+  # Footer
+  --------------------------------------------------------------*/
 #footer {
   color: #fff;
   font-size: 14px;
